# LR3

./: test.txt
n3/C++/: CMakeLists.txt
n3/C++/benchmarks/: array_benchmark.cpp  avl_benchmark.cpp  duble_list_benchmark.cpp  hash_table_benchmark.cpp  list_benchmark.cpp  queue_benchmark.cpp  stack_benchmark.cpp
n3/C++/containers/: AVL.h  Array.h  DubleList.h  HashTable.h  List.h  Nodes.h  Queue.h  Stack.h  main.cpp
n3/C++/tests/: array_test.cpp  avl_test.cpp  duble_list_test.cpp  hash_table_test.cpp  list_test.cpp  queue_test.cpp  stack_test.cpp
n3/Go/: coverage.html  coverage.out  main.go  queue  queue.go  queue_test.go  stack  stack.go  stack_test.go
n4/C++/: 123  AVL.h  Array.h  DubleList.h  HashTable.h  List.h  Nodes.h  Queue.h  Stack.h  main  main.cpp
n4/Go/: 12  main.go  queue  queue.go  stack  stack.go
